--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     androidTestCompile 'junit:junit:4.12'
+    compile 'com.google.guava:guava:16.0.1'
 }
