--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="cajohnson7.cs222.bsu.edu.shoppinglist" >
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -18,11 +18,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="edu.bsu.cs222.shoppingList.IngredientSelector"
-            android:label="@string/title_activity_second"
-            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
